# homework_27

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
apple_shop/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apple_shop/fixtures/: catalog.json  contacts.json
apple_shop/management/commands/: load_catalog.py  load_contacts.py
apple_shop/migrations/: 0001_initial.py  0002_alter_product_category.py  0003_contactdata.py  0004_category_photo.py  0005_remove_product_image_product_photo.py  0006_product_seller.py
apple_shop/templates/apple_shop/: catalog.html  categories.html  contacts.html  index.html  owner.html
apple_shop/templates/apple_shop/tools/: navbar.html
apple_shop/templatetags/: my_tags.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_article_is_published.py  0003_article_editor.py
blog/templatetags/: my_tags.py
config/: settings.py  urls.py
src/: utils.py
templates/apple_shop/: base.html  catalog.html  category_detail.html  owner.html  product_confirm_delete.html  product_detail.html
templates/apple_shop/tools/: navbar.html
templates/blog/: article_confirm_delete.html  article_detail.html  base.html  editor.html  index.html  owner.html
templates/blog/tools/: navbar.html
templates/users/: login.html  user_form.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_superuser.py
users/migrations/: 0001_initial.py  0002_user_token.py
